src/styles/tabs.css
div.tabs {
  border: none;
  border-radius: 6px;
  display: flex;
  justify-content: center;
  position: fixed;
  left: 50%;
  bottom: 8px;
  transform: translateX(-50%);
  background-color: rgb(215, 66, 113);
  box-shadow: 0px 4px 8px 2px rgba(215, 56, 113, 0.2);
}

div.tabs > button {
  all: unset;
  text-align: center;
  background-color: transparent;
  border: none;
  padding: 8px;
  width: 80px;
  color: white;
}

div.tabs > button.selected {
  font-weight: 700;
}

